# GeoHead-Adaptive-For-Few-Shot-Regression

./: .gitignore  .python-version  README.md  pyproject.toml
docs/: design.md
references/: discussion.md
results/m4_main_v2/: aggregated.csv  comparison.md  config.json  records.jsonl  summary.md
results/m4_main_v2/run_0/: config.json
results/m4_main_v2/run_0/history/: baseline.json  geohead.json  warmup.json
results/m4_main_v2/run_1/: config.json
results/m4_main_v2/run_1/history/: baseline.json  baseline_source_only.json  geohead.json  warmup.json
results/m4_main_v2/run_2/: config.json
results/m4_main_v2/run_2/history/: baseline.json  geohead.json  warmup.json
scripts/: m3_sanity_check.py  m4_main.py
src/geohead/: __init__.py
src/geohead/adaptation/: __init__.py  test_time.py
src/geohead/data/: __init__.py  episode.py  toy.py
src/geohead/evaluation/: __init__.py  metrics.py  runner.py  visualize.py
src/geohead/experiments/: __init__.py  main.py  sanity.py
src/geohead/losses/: __init__.py  dare_gram.py  head_reg.py
src/geohead/models/: __init__.py  encoder.py  head.py
src/geohead/training/: __init__.py  b1.py  baseline.py  geohead.py  warmup.py
tests/adaptation/: test_test_time.py
tests/data/: test_episode.py  test_toy.py
tests/evaluation/: test_metrics.py  test_runner.py  test_visualize.py
tests/experiments/: test_main.py  test_sanity.py
tests/losses/: test_dare_gram.py  test_head_reg.py
tests/models/: test_encoder.py  test_head.py
tests/training/: test_b1.py  test_baseline.py  test_geohead.py  test_unified_sampling.py  test_warmup.py
